model/lexer_parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> kripke
Rule 1     kripke -> states_decl init_decl trans_decl label_decl values_decl
Rule 2     states_decl -> STATES COLON LBRACE id_list RBRACE SEMICOLON
Rule 3     init_decl -> INIT COLON LBRACE id_list RBRACE SEMICOLON
Rule 4     trans_decl -> TRANS COLON LBRACE trans_list RBRACE SEMICOLON
Rule 5     trans_list -> trans_pair
Rule 6     trans_list -> trans_pair COMMA trans_list
Rule 7     trans_pair -> LPAREN ID COMMA ID RPAREN
Rule 8     label_decl -> LABEL COLON LBRACE label_list RBRACE SEMICOLON
Rule 9     label_list -> label_assignment
Rule 10    label_list -> label_assignment COMMA label_list
Rule 11    label_assignment -> ID COLON LBRACE id_list RBRACE
Rule 12    values_decl -> VALUES COLON LBRACE value_list RBRACE SEMICOLON
Rule 13    value_list -> value_assignment
Rule 14    value_list -> value_assignment COMMA value_list
Rule 15    value_assignment -> ID COLON NUMBER
Rule 16    id_list -> ID
Rule 17    id_list -> ID COMMA id_list

Terminals, with rules where they appear

COLON                : 2 3 4 8 11 12 15
COMMA                : 6 7 10 14 17
ID                   : 7 7 11 15 16 17
INIT                 : 3
LABEL                : 8
LBRACE               : 2 3 4 8 11 12
LPAREN               : 7
NUMBER               : 15
RBRACE               : 2 3 4 8 11 12
RPAREN               : 7
SEMICOLON            : 2 3 4 8 12
STATES               : 2
TRANS                : 4
VALUES               : 12
error                : 

Nonterminals, with rules where they appear

id_list              : 2 3 11 17
init_decl            : 1
kripke               : 0
label_assignment     : 9 10
label_decl           : 1
label_list           : 8 10
states_decl          : 1
trans_decl           : 1
trans_list           : 4 6
trans_pair           : 5 6
value_assignment     : 13 14
value_list           : 12 14
values_decl          : 1

Parsing method: LALR

state 0

    (0) S' -> . kripke
    (1) kripke -> . states_decl init_decl trans_decl label_decl values_decl
    (2) states_decl -> . STATES COLON LBRACE id_list RBRACE SEMICOLON

    STATES          shift and go to state 3

    kripke                         shift and go to state 1
    states_decl                    shift and go to state 2

state 1

    (0) S' -> kripke .



state 2

    (1) kripke -> states_decl . init_decl trans_decl label_decl values_decl
    (3) init_decl -> . INIT COLON LBRACE id_list RBRACE SEMICOLON

    INIT            shift and go to state 5

    init_decl                      shift and go to state 4

state 3

    (2) states_decl -> STATES . COLON LBRACE id_list RBRACE SEMICOLON

    COLON           shift and go to state 6


state 4

    (1) kripke -> states_decl init_decl . trans_decl label_decl values_decl
    (4) trans_decl -> . TRANS COLON LBRACE trans_list RBRACE SEMICOLON

    TRANS           shift and go to state 8

    trans_decl                     shift and go to state 7

state 5

    (3) init_decl -> INIT . COLON LBRACE id_list RBRACE SEMICOLON

    COLON           shift and go to state 9


state 6

    (2) states_decl -> STATES COLON . LBRACE id_list RBRACE SEMICOLON

    LBRACE          shift and go to state 10


state 7

    (1) kripke -> states_decl init_decl trans_decl . label_decl values_decl
    (8) label_decl -> . LABEL COLON LBRACE label_list RBRACE SEMICOLON

    LABEL           shift and go to state 12

    label_decl                     shift and go to state 11

state 8

    (4) trans_decl -> TRANS . COLON LBRACE trans_list RBRACE SEMICOLON

    COLON           shift and go to state 13


state 9

    (3) init_decl -> INIT COLON . LBRACE id_list RBRACE SEMICOLON

    LBRACE          shift and go to state 14


state 10

    (2) states_decl -> STATES COLON LBRACE . id_list RBRACE SEMICOLON
    (16) id_list -> . ID
    (17) id_list -> . ID COMMA id_list

    ID              shift and go to state 16

    id_list                        shift and go to state 15

state 11

    (1) kripke -> states_decl init_decl trans_decl label_decl . values_decl
    (12) values_decl -> . VALUES COLON LBRACE value_list RBRACE SEMICOLON

    VALUES          shift and go to state 18

    values_decl                    shift and go to state 17

state 12

    (8) label_decl -> LABEL . COLON LBRACE label_list RBRACE SEMICOLON

    COLON           shift and go to state 19


state 13

    (4) trans_decl -> TRANS COLON . LBRACE trans_list RBRACE SEMICOLON

    LBRACE          shift and go to state 20


state 14

    (3) init_decl -> INIT COLON LBRACE . id_list RBRACE SEMICOLON
    (16) id_list -> . ID
    (17) id_list -> . ID COMMA id_list

    ID              shift and go to state 16

    id_list                        shift and go to state 21

state 15

    (2) states_decl -> STATES COLON LBRACE id_list . RBRACE SEMICOLON

    RBRACE          shift and go to state 22


state 16

    (16) id_list -> ID .
    (17) id_list -> ID . COMMA id_list

    RBRACE          reduce using rule 16 (id_list -> ID .)
    COMMA           shift and go to state 23


state 17

    (1) kripke -> states_decl init_decl trans_decl label_decl values_decl .

    $end            reduce using rule 1 (kripke -> states_decl init_decl trans_decl label_decl values_decl .)


state 18

    (12) values_decl -> VALUES . COLON LBRACE value_list RBRACE SEMICOLON

    COLON           shift and go to state 24


state 19

    (8) label_decl -> LABEL COLON . LBRACE label_list RBRACE SEMICOLON

    LBRACE          shift and go to state 25


state 20

    (4) trans_decl -> TRANS COLON LBRACE . trans_list RBRACE SEMICOLON
    (5) trans_list -> . trans_pair
    (6) trans_list -> . trans_pair COMMA trans_list
    (7) trans_pair -> . LPAREN ID COMMA ID RPAREN

    LPAREN          shift and go to state 28

    trans_list                     shift and go to state 26
    trans_pair                     shift and go to state 27

state 21

    (3) init_decl -> INIT COLON LBRACE id_list . RBRACE SEMICOLON

    RBRACE          shift and go to state 29


state 22

    (2) states_decl -> STATES COLON LBRACE id_list RBRACE . SEMICOLON

    SEMICOLON       shift and go to state 30


state 23

    (17) id_list -> ID COMMA . id_list
    (16) id_list -> . ID
    (17) id_list -> . ID COMMA id_list

    ID              shift and go to state 16

    id_list                        shift and go to state 31

state 24

    (12) values_decl -> VALUES COLON . LBRACE value_list RBRACE SEMICOLON

    LBRACE          shift and go to state 32


state 25

    (8) label_decl -> LABEL COLON LBRACE . label_list RBRACE SEMICOLON
    (9) label_list -> . label_assignment
    (10) label_list -> . label_assignment COMMA label_list
    (11) label_assignment -> . ID COLON LBRACE id_list RBRACE

    ID              shift and go to state 35

    label_list                     shift and go to state 33
    label_assignment               shift and go to state 34

state 26

    (4) trans_decl -> TRANS COLON LBRACE trans_list . RBRACE SEMICOLON

    RBRACE          shift and go to state 36


state 27

    (5) trans_list -> trans_pair .
    (6) trans_list -> trans_pair . COMMA trans_list

    RBRACE          reduce using rule 5 (trans_list -> trans_pair .)
    COMMA           shift and go to state 37


state 28

    (7) trans_pair -> LPAREN . ID COMMA ID RPAREN

    ID              shift and go to state 38


state 29

    (3) init_decl -> INIT COLON LBRACE id_list RBRACE . SEMICOLON

    SEMICOLON       shift and go to state 39


state 30

    (2) states_decl -> STATES COLON LBRACE id_list RBRACE SEMICOLON .

    INIT            reduce using rule 2 (states_decl -> STATES COLON LBRACE id_list RBRACE SEMICOLON .)


state 31

    (17) id_list -> ID COMMA id_list .

    RBRACE          reduce using rule 17 (id_list -> ID COMMA id_list .)


state 32

    (12) values_decl -> VALUES COLON LBRACE . value_list RBRACE SEMICOLON
    (13) value_list -> . value_assignment
    (14) value_list -> . value_assignment COMMA value_list
    (15) value_assignment -> . ID COLON NUMBER

    ID              shift and go to state 42

    value_list                     shift and go to state 40
    value_assignment               shift and go to state 41

state 33

    (8) label_decl -> LABEL COLON LBRACE label_list . RBRACE SEMICOLON

    RBRACE          shift and go to state 43


state 34

    (9) label_list -> label_assignment .
    (10) label_list -> label_assignment . COMMA label_list

    RBRACE          reduce using rule 9 (label_list -> label_assignment .)
    COMMA           shift and go to state 44


state 35

    (11) label_assignment -> ID . COLON LBRACE id_list RBRACE

    COLON           shift and go to state 45


state 36

    (4) trans_decl -> TRANS COLON LBRACE trans_list RBRACE . SEMICOLON

    SEMICOLON       shift and go to state 46


state 37

    (6) trans_list -> trans_pair COMMA . trans_list
    (5) trans_list -> . trans_pair
    (6) trans_list -> . trans_pair COMMA trans_list
    (7) trans_pair -> . LPAREN ID COMMA ID RPAREN

    LPAREN          shift and go to state 28

    trans_pair                     shift and go to state 27
    trans_list                     shift and go to state 47

state 38

    (7) trans_pair -> LPAREN ID . COMMA ID RPAREN

    COMMA           shift and go to state 48


state 39

    (3) init_decl -> INIT COLON LBRACE id_list RBRACE SEMICOLON .

    TRANS           reduce using rule 3 (init_decl -> INIT COLON LBRACE id_list RBRACE SEMICOLON .)


state 40

    (12) values_decl -> VALUES COLON LBRACE value_list . RBRACE SEMICOLON

    RBRACE          shift and go to state 49


state 41

    (13) value_list -> value_assignment .
    (14) value_list -> value_assignment . COMMA value_list

    RBRACE          reduce using rule 13 (value_list -> value_assignment .)
    COMMA           shift and go to state 50


state 42

    (15) value_assignment -> ID . COLON NUMBER

    COLON           shift and go to state 51


state 43

    (8) label_decl -> LABEL COLON LBRACE label_list RBRACE . SEMICOLON

    SEMICOLON       shift and go to state 52


state 44

    (10) label_list -> label_assignment COMMA . label_list
    (9) label_list -> . label_assignment
    (10) label_list -> . label_assignment COMMA label_list
    (11) label_assignment -> . ID COLON LBRACE id_list RBRACE

    ID              shift and go to state 35

    label_assignment               shift and go to state 34
    label_list                     shift and go to state 53

state 45

    (11) label_assignment -> ID COLON . LBRACE id_list RBRACE

    LBRACE          shift and go to state 54


state 46

    (4) trans_decl -> TRANS COLON LBRACE trans_list RBRACE SEMICOLON .

    LABEL           reduce using rule 4 (trans_decl -> TRANS COLON LBRACE trans_list RBRACE SEMICOLON .)


state 47

    (6) trans_list -> trans_pair COMMA trans_list .

    RBRACE          reduce using rule 6 (trans_list -> trans_pair COMMA trans_list .)


state 48

    (7) trans_pair -> LPAREN ID COMMA . ID RPAREN

    ID              shift and go to state 55


state 49

    (12) values_decl -> VALUES COLON LBRACE value_list RBRACE . SEMICOLON

    SEMICOLON       shift and go to state 56


state 50

    (14) value_list -> value_assignment COMMA . value_list
    (13) value_list -> . value_assignment
    (14) value_list -> . value_assignment COMMA value_list
    (15) value_assignment -> . ID COLON NUMBER

    ID              shift and go to state 42

    value_assignment               shift and go to state 41
    value_list                     shift and go to state 57

state 51

    (15) value_assignment -> ID COLON . NUMBER

    NUMBER          shift and go to state 58


state 52

    (8) label_decl -> LABEL COLON LBRACE label_list RBRACE SEMICOLON .

    VALUES          reduce using rule 8 (label_decl -> LABEL COLON LBRACE label_list RBRACE SEMICOLON .)


state 53

    (10) label_list -> label_assignment COMMA label_list .

    RBRACE          reduce using rule 10 (label_list -> label_assignment COMMA label_list .)


state 54

    (11) label_assignment -> ID COLON LBRACE . id_list RBRACE
    (16) id_list -> . ID
    (17) id_list -> . ID COMMA id_list

    ID              shift and go to state 16

    id_list                        shift and go to state 59

state 55

    (7) trans_pair -> LPAREN ID COMMA ID . RPAREN

    RPAREN          shift and go to state 60


state 56

    (12) values_decl -> VALUES COLON LBRACE value_list RBRACE SEMICOLON .

    $end            reduce using rule 12 (values_decl -> VALUES COLON LBRACE value_list RBRACE SEMICOLON .)


state 57

    (14) value_list -> value_assignment COMMA value_list .

    RBRACE          reduce using rule 14 (value_list -> value_assignment COMMA value_list .)


state 58

    (15) value_assignment -> ID COLON NUMBER .

    COMMA           reduce using rule 15 (value_assignment -> ID COLON NUMBER .)
    RBRACE          reduce using rule 15 (value_assignment -> ID COLON NUMBER .)


state 59

    (11) label_assignment -> ID COLON LBRACE id_list . RBRACE

    RBRACE          shift and go to state 61


state 60

    (7) trans_pair -> LPAREN ID COMMA ID RPAREN .

    COMMA           reduce using rule 7 (trans_pair -> LPAREN ID COMMA ID RPAREN .)
    RBRACE          reduce using rule 7 (trans_pair -> LPAREN ID COMMA ID RPAREN .)


state 61

    (11) label_assignment -> ID COLON LBRACE id_list RBRACE .

    COMMA           reduce using rule 11 (label_assignment -> ID COLON LBRACE id_list RBRACE .)
    RBRACE          reduce using rule 11 (label_assignment -> ID COLON LBRACE id_list RBRACE .)

